[package]
name = "acpr-stats-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arcsys = { git = "https://github.com/super-continent/arcsys.git" }
clap = { version = "3.1", features = ["derive"] }
rayon = "1.5"
walkdir = "2"
